added support for quirky names + more
- names can have spaces, quotes, etc
- friendslist preserves order
- started commenting
- player names get coloured