@@ -12,10 +12,8 @@ import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
 import net.minecraft.text.Text;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Environment(EnvType.CLIENT)
 public class ModMenuIntegration implements ModMenuApi
@@ -27,60 +25,42 @@ public class ModMenuIntegration implements ModMenuApi
             ConfigBuilder builder = ConfigBuilder.create().setTitle(Text.translatable("config.friendHighlighter.title"));
 
             ConfigEntryBuilder entryBuilder = builder.entryBuilder();
-            ConfigCategory testing = builder.getOrCreateCategory(Text.translatable("config.friendHighlighter.category.test"));
-            testing.addEntry(new NestedListListEntry<HighlightedFriend, MultiElementListEntry<HighlightedFriend>>(
+            ConfigCategory friendsList = builder.getOrCreateCategory(Text.translatable("config.friendHighlighter.category.friendsList"));
+            friendsList.addEntry(new NestedListListEntry<HighlightedFriend, MultiElementListEntry<HighlightedFriend>>(
                     Text.literal("Friend's List"),
-                    mapToPlayerList(FHConfig.getInstance().friendsMap),
+                    mapToFriendsList(FHConfig.getInstance().friendsMap),
                     true,
                     Optional::empty,
                     list -> FHConfig.getInstance().friendsMap = playerListToMap(list),
-                    () -> mapToPlayerList(FHConfig.getInstance().friendsMap),
+                    () -> mapToFriendsList(FHConfig.getInstance().friendsMap),
                     entryBuilder.getResetButtonKey(),
                     true,
-                    false,
-                    (friend, nestedListListEntry) -> {
-                        //  when adding a new player
-                        if (friend == null) {
-                            var defaultFriend = new HighlightedFriend();
-                            return new MultiElementListEntry<>(
-                                    Text.literal("Friend"), defaultFriend,
-                                    List.of(entryBuilder.startTextField(Text.literal("Name"), defaultFriend.name)
-                                                    .setSaveConsumer(str -> defaultFriend.name = str)
-                                                    .build(),
-                                            entryBuilder.startColorField(Text.literal("Color"), defaultFriend.color)
-                                                    .setSaveConsumer(color -> defaultFriend.color = color)
-                                                    .build(),
-                                            entryBuilder.startBooleanToggle(Text.literal("Only Players"), defaultFriend.onlyPlayers)
-                                                    .setSaveConsumer(color -> {})
-                                                    .build(),
-                                            entryBuilder.startBooleanToggle(Text.literal("Outline Friend"), defaultFriend.outlineFriend)
-                                                    .setSaveConsumer(color -> {})
-                                                    .build()),
-                                    true);
-                        //  when loading a player from the config
-                        } else {
-                            return new MultiElementListEntry<>(
-                                    Text.literal(friend.name.equals("") ? "Friend" : friend.name), friend,
-                                    List.of(entryBuilder.startTextField(Text.literal("Name"), friend.name)
-                                                    .setSaveConsumer(str -> friend.name = str)
-                                                    .build(),
-                                            entryBuilder.startColorField(Text.literal("Color"), friend.color)
-                                                    .setSaveConsumer(color -> friend.color = color)
-                                                    .build(),
-                                            entryBuilder.startBooleanToggle(Text.literal("Only Players"), friend.onlyPlayers)
-                                                    .setSaveConsumer(onlyPlayers -> friend.onlyPlayers = onlyPlayers)
-                                                    .build(),
-                                            entryBuilder.startBooleanToggle(Text.literal("Outline Friend"), friend.outlineFriend)
-                                                    .setSaveConsumer(outlineFriend -> friend.outlineFriend = outlineFriend)
-                                                    .build()),
-                                    true);
-                        }
+                    true,
+                    (friendIn, nestedListListEntry) -> {
+                        final var friend = friendIn == null ? new HighlightedFriend() : friendIn;
+                        return new MultiElementListEntry<>(
+                                Text.literal(friend.name.equals("") ? "Friend" : friend.name), friend,
+                                Arrays.asList(
+                                        entryBuilder.startTextField(Text.literal("Name"), friend.name)
+                                                .setSaveConsumer(str -> friend.name = str)
+                                                .setErrorSupplier(str -> str.equals("") ? Optional.of(Text.of("Friend Name cannot be blank.")) : Optional.empty())
+                                                .build(),
+                                        entryBuilder.startColorField(Text.literal("Color"), friend.color)
+                                                .setSaveConsumer(color -> friend.color = color)
+                                                .build(),
+                                        entryBuilder.startBooleanToggle(Text.literal("Only Players"), friend.onlyPlayers)
+                                                .setSaveConsumer(onlyPlayers -> friend.onlyPlayers = onlyPlayers)
+                                                .build(),
+                                        entryBuilder.startBooleanToggle(Text.literal("Outline Friend"), friend.outlineFriend)
+                                                .setSaveConsumer(outlineFriend -> friend.outlineFriend = outlineFriend)
+                                                .build()),
+                                friend.name.equals(""));
                     }
             ));
             builder.setSavingRunnable(()->{
                 FHConfig.saveConfig();
                 FHConfig.loadConfig();
-                FriendHighlighter.COMMAND_HANDLER.updateList(false,false);
+                FriendHighlighter.COMMAND_HANDLER.updateList();
             });
             return builder.setParentScreen(screen).build();
         };
@@ -88,13 +68,16 @@ public class ModMenuIntegration implements ModMenuApi
 
     private static Map<String, HighlightedFriend> playerListToMap(List<HighlightedFriend> list)
     {
-        Map map = new HashMap();
+        Map map = new LinkedHashMap();
+        Collections.reverse(list);
         list.forEach(p -> map.put(p.name, p));
         return map;
     }
 
-    private static List<HighlightedFriend> mapToPlayerList(Map<String, HighlightedFriend> map)
+    private static List<HighlightedFriend> mapToFriendsList(Map<String, HighlightedFriend> map)
     {
-        return map.values().stream().toList();
+        var list = map.values().stream().collect(Collectors.toList());
+        Collections.reverse(list);
+        return list;
     }
 }
